# soniclab-filters

./: .gitignore  soniclab-filters.cabal
src/: Main.hs
